# rules_rust_repo

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bzlmod  sys_deps.bzl
basic/ppp/: BUILD.bazel
basic/ppp/crates/: BUILD.addr2line-0.24.2.bazel  BUILD.adler2-2.0.0.bazel  BUILD.autocfg-1.4.0.bazel  BUILD.backtrace-0.3.74.bazel  BUILD.bazel  BUILD.cc-1.2.3.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.cmake-0.1.52.bazel  BUILD.equivalent-1.0.1.bazel  BUILD.futures-channel-0.3.31.bazel  BUILD.futures-core-0.3.31.bazel  BUILD.futures-task-0.3.31.bazel  BUILD.futures-util-0.3.31.bazel  BUILD.gimli-0.31.1.bazel  BUILD.hashbrown-0.15.2.bazel  BUILD.indexmap-2.7.0.bazel  BUILD.itoa-1.0.14.bazel  BUILD.libc-0.2.168.bazel  BUILD.libz-sys-1.1.20.bazel  BUILD.log-0.4.22.bazel  BUILD.memchr-2.7.4.bazel  BUILD.miniz_oxide-0.8.0.bazel  BUILD.num_enum-0.7.3.bazel  BUILD.num_enum_derive-0.7.3.bazel  BUILD.object-0.36.5.bazel  BUILD.pin-project-lite-0.2.15.bazel  BUILD.pin-utils-0.1.0.bazel  BUILD.pkg-config-0.3.31.bazel  BUILD.proc-macro-crate-3.2.0.bazel  BUILD.proc-macro2-1.0.92.bazel  BUILD.quote-1.0.37.bazel  BUILD.rdkafka-0.34.0.bazel  BUILD.rdkafka-sys-4.8.0+2.3.0.bazel  BUILD.rustc-demangle-0.1.24.bazel  BUILD.ryu-1.0.18.bazel  BUILD.serde-1.0.216.bazel  BUILD.serde_derive-1.0.216.bazel  BUILD.serde_json-1.0.133.bazel  BUILD.shlex-1.3.0.bazel  BUILD.slab-0.4.9.bazel  (+18 more)
