
load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_vendor")

crates_vendor(
    name = "crates_vendor",
    annotations = {
    },
    cargo_lockfile = "Cargo.Bazel.lock",
    generate_build_scripts = True,
    mode = "remote",
    packages = {
        "rdkafka": crate.spec(
            features = ["cmake-build"],
            version = "0.34.0",
        ),
    },
    repository_name = "basic",
    tags = ["manual"],
)
